working dmg with modular; problems with some tests; dmg works on temurin 20